[package]
name = "scope-creep"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
caw = { version = "0.8", features = ["player", "web"] }
caw_bevy = "0.2"
grid_2d = "0.15"
direction = "0.18"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
lazy_static = "1.5"
